feat: make ship barrel-rollable

--- a/todo.org
+++ b/todo.org
@@ -5,14 +5,13 @@
    Thomas
 ** TODO Matrix rotation
    Jorg
-   Morgen sander vragen of hij zijn oorsprong opslaat voor de aanroep aan rotatie matrix crap
 ** TODO Matrix scaling
-   Thomas
+   Jorg (Gestolen van Thomas)
 ** TODO Vector inproduct
 ** TODO Vector uitproduct
 ** TODO Make sure that Matrixes are used efficiently (no double dot products)
 ** TODO Make ship controllable [translation]
    Thomas
-** TODO Make ship controllable [barrel roll]
+** DONE Make ship controllable [barrel roll]
    Thomas
 ** TODO Make ship shoot an object
