--- a/todo.org
+++ b/todo.org
@@ -7,11 +7,17 @@
    Jorg
 ** DONE Matrix scaling
    Thomas (Gestolen van Jorg(Gestolen van Thomas))
-** TODO Vector inproduct
-** TODO Vector uitproduct
+** DONE Vector inproduct
+** DONE Vector crossproduct
+** DONE Test vector inproduct / crossproduct
 ** TODO Make sure that Matrixes are used efficiently (no double dot products)
 ** DONE Make ship controllable [translation]
    Thomas
 ** DONE Make ship controllable [barrel roll]
    Thomas
 ** TODO Make ship shoot an object
+** TODO Reimplement perspective with LinalMatrix
+*** TODO LinalVector normalise
+*** TODO Camera matrix
+*** TODO Perspective projection matrix
+*** TODO w calculations
